auto-test/tests/chapter_18/invalid_types/initializers/non_constant_static_elem_init.c
struct pair {
  int a;
  int b;
};

struct pair x = {1, 2};
struct outer {
    double d;
    struct pair inner;
};


struct outer y = {1.0, x};